--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class=container>
+  <div>
+    <img src="" alt="">
+    <h3></h3>
+    <a class="btn btn-gradient" href="#">Sign up</a>
+  </div>
+</div>
