fiz uma parte da view

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,7 @@
 <div class="dashboard-container">
   <div class="dashboard-docdoggie">
-    <img class="image-background" src="" alt="">
+    <div class="image-background" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
+    </div>
     <img class="docdoggie-pet" src="" alt="">
   </div>
   <div class="dashboard-header">
