carousel that doesnt work

--- a/app/views/doggies/new.html.erb
+++ b/app/views/doggies/new.html.erb
@@ -1,1 +1,31 @@
-<h1>ola</h1>
+
+<div id="doggieCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag "doggies/brown-docdoggie.png", class:"d-block w-100" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "doggies/gray-docdoggie.png", class:"d-block w-100" %>
+    </div>
+     <div class="carousel-item">
+      <%= image_tag "doggies/cream-docdoggie.png", class:"d-block w-100" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "doggies/pink-docdoggie.png", class:"d-block w-100" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "doggies/yellow-docdoggie.png", class:"d-block w-100" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "doggies/red-docdoggie.png", class:"d-block w-100" %>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#doggieCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#doggieCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
