just some minor steps

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,3 +13,9 @@
   background: linear-gradient(#ffeb99, #ffdf60);
   color: rgb(0, 0, 0);
 }
+
+.image-background {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
