--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class=container>
   <div>
-    <img src="" alt="">
+        <div class="image-background" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
     <h3></h3>
     <a class="btn btn-gradient" href="#">Sign up</a>
   </div>
