Updated images so they have better quality

--- a/app/views/doggies/new.html.erb
+++ b/app/views/doggies/new.html.erb
@@ -1,4 +1,4 @@
-<div id="doggieCarousel" class="carousel carousel-dark slide" data-bs-interval="false">
+<div id="doggieCarousel" class="carousel carousel-dark slide" data-bs-interval="false" data-controller="doggies">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <%= image_tag "doggies/brown-docdoggie.png", class:"d-block w-100" %>
