--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,5 @@
-<div class=container>
-  <div>
-        <div class="image-background" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
-    <h3></h3>
-    <a class="btn btn-gradient" href="#">Sign up</a>
-  </div>
+
+<div class="home-background position-relative" style="background-image: url('<%= image_path "backgrounds/park-long.png" %>')">
+  <p class="product-offer">Schedule your medication reminders with a furry friend</p>
+  <a class="btn btn-gradient home-button" href="#">Sign up</a>
 </div>
