--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,21 +1,43 @@
-.image-background{
-  height: 300px;
+.dashboard-container {
+  height: 100vh;
+}
+
+.background-dashboard{
+  position: center;
+  height: 400px;
+  background-size: cover;
 }
 
 .dashboard-header, h1, h3{
   text-align: center;
+  align-content: center;
 }
 
 .dashboard-items{
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
-  margin: 20px;
+  margin: 0px 30px 30px 30px;
+  align-items: center;
+  padding: 10px;
 }
 
 .my-profile, .my-medications, .user-calendar, .add-medication{
   border-radius: 30px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 150px;
 
+}
+
+.collar-image, .medications-image, .calendar-image, .pill-image {
+  height: 80px;
+  object-fit: contain;
+}
+
+.icon-text {
 
 }
