--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
   <div class="dashboard-docdoggie">
-    <div class="image-background" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
+    <div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.jpg" %>')">
     </div>
     <img class="docdoggie-pet" src="" alt="">
   </div>
@@ -8,18 +8,35 @@
     <h1>"Doggie Name"</h1>
     <h3>"Stats"</h3>
   </div>
+
   <div class="dashboard-items">
+
     <div class="my-profile">
-    <h3>My Profile</h3>
+      <div class="d-flex justify-content-between flex-column">
+        <%= image_tag "icons/collar-icon.png", class: "collar-image" %>
+        <h3 class="icon-text">My Profile</h3>
+      </div>
     </div>
+
     <div class="my-medications">
-      <h3>My Medications</h3>
+      <div class="d-flex justify-content-between flex-column">
+        <%= image_tag "icons/medications.png", class: "medications-image" %>
+        <h3 class="icon-text">Medications</h3>
+      </div>
     </div>
+
     <div class="user-calendar">
-      <h3>Calendar</h3>
+      <div class="d-flex justify-content-between flex-column">
+        <%= image_tag "icons/calendar-icon.png", class: "calendar-image" %>
+        <h3 class="icon-text">Calendar</h3>
+      </div>
     </div>
+
     <div class="add-medication">
-      <h3>Add Medication</h3>
+      <div class="d-flex justify-content-between flex-column">
+        <%= image_tag "icons/pill.png", class: "pill-image" %>
+        <h3 class="icon-text">Add Meds</h3>
+      </div>
     </div>
   </div>
 </div>
