--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,37 @@
+<div id="homeCarousel" class="carousel carousel-dark slide home-background" style="background-image: url('<%= image_path "backgrounds/park-long.png" %>')" data-bs-interval="false">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="home-info">
+        <h2>You’re someone that needs to take medication daily.</h2>
+        <h2>It’s important.</h2>
+        <h2>We understand how boresome and even distressing it can be...</h2>
+      </div>
+    </div>
 
-<div class="home-background position-relative" style="background-image: url('<%= image_path "backgrounds/park-long.png" %>')">
-  <p class="product-offer">Schedule your medication reminders with a furry friend</p>
-  <a class="btn btn-gradient home-button" href="#">Sign up</a>
+    <div class="carousel-item">
+      <div class="home-info-ca">
+        <h1>"Huh? What is this?"</h1>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <div class="home-info">
+        <h2>"Schedule your medication reminders with a furry friend!"</h2>
+        <h3>From: DocDoggie</h3>
+        <h3>To: You!</h3>
+        <a class="btn btn-gradient btn-home" href="#">Sign up</a>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" style="background-image: none" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" style="background-image: none" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
+<%# <p class="product-offer">Schedule your medication reminders with a furry friend</p>
+        <a class="btn btn-gradient home-button" href="#">Sign up</a> %>
