--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
   <div class="dashboard-docdoggie">
-    <div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.jpg" %>')">
+    <div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
     </div>
     <img class="docdoggie-pet" src="" alt="">
   </div>
