--- a/app/views/doggies/new.html.erb
+++ b/app/views/doggies/new.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="doggies">
-  <div id="doggieCarousel" class="carousel carousel-dark slide" data-bs-interval="false">
+  <div id="doggieCarousel" class="carousel carousel-dark slide" data-bs-interval="false" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <%= image_tag "doggies/cream-docdoggie.png", class:"d-block w-100", id:"cream-docdoggie" %>
