--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,20 +29,42 @@
   min-height: 100vh;
 }
 
-
-h2, h1, h3 {
+.home-info-1, .home-info-2, .home-info-3 {
   margin: 15px;
   margin-left: 16px;
   margin-right: 16px;
   text-align: center;
   font-weight: bold;
-  ;
-}
-
-.home-info {
   margin-top: 30%;
 }
 
-.home-info-ca {
+.home-info-1 {
+  animation: fadeIn 3s;
+}
+
+.home-info-2 {
   margin-top: 60%;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.closed-box {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  animation: fadeIn 3s;
+}
+
+.open-box {
+  height: 400px;
+  display: flex;
+  justify-content: center;
 }
