--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,26 +1,29 @@
 // Specific CSS for your home-page
-.btn-gradient {
-  color: rgb(0, 0, 0);
-  // padding: 12px 20px;
-  border-radius: 50px;
-  font-weight: bold;
-  font-size: 25px;
-  background: #FCD745;
-  transition: background 0.3s ease;
-}
-
-.btn-gradient:hover {
-  background: #f0c000;
-  color: rgb(0, 0, 0);
-}
 
 .btn-home {
   display: flex;
   justify-content: center;
-  margin-left: 30%;
-  margin-right: 30%;
-  margin-top: 22px;
+  margin-top: 60px;
+  a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    border-radius: 50px;
+    font-weight: bold;
+    font-size: 25px;
+    background: #FCD745;
+    transition: 0.3s ease;
+    padding: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+
+    &:active {
+      background: #f0c000;
+      color: rgb(0, 0, 0);
+      text-decoration: none;
+    }
+  }
 }
+
 .home-background {
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,13 +32,18 @@
   min-height: 100vh;
 }
 
+.home-info-text {
+  font-weight: 700;
+}
+
 .home-info-1, .home-info-2, .home-info-3 {
+  font-family: 'Nunito', sans-serif;
+  font-style: italic;
   margin: 15px;
   margin-left: 16px;
   margin-right: 16px;
   text-align: center;
-  font-weight: bold;
-  margin-top: 30%;
+  margin-top: 170px;
 }
 
 .home-info-1 {
@@ -57,14 +65,22 @@
 }
 
 .closed-box {
-  height: 300px;
   display: flex;
   justify-content: center;
+  height: 300px;
   animation: fadeIn 3s;
 }
 
+
 .open-box {
-  height: 400px;
   display: flex;
   justify-content: center;
+  height: 400px;
+}
+
+.box-frame {
+  position: absolute;
+  bottom: 44px;
+  left: 50%;
+  transform: translateX(-50%);
 }
