--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,33 @@
 <div id="homeCarousel" class="carousel carousel-dark slide home-background" style="background-image: url('<%= image_path "backgrounds/park-long.png" %>')" data-bs-interval="false">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
+  <div class="carousel-inner" style="height: 100vh;">
+    <div class="carousel-item active h-100">
       <div class="home-info-1">
-        <h2>You’re someone that needs to take medication daily.</h2>
-        <h2>It’s important.</h2>
-        <h2>We understand how boresome and even distressing it can be...</h2>
+        <h2 class="home-info-text">You’re someone that needs to take medication daily.</h2>
+        <h2 class="home-info-text">It’s important.</h2>
+        <h2 class="home-info-text">We understand how boresome and even distressing it can be...</h2>
       </div>
     </div>
 
-    <div class="carousel-item">
+    <div class="carousel-item h-100 position-relative">
       <div class="home-info-2">
-        <h1>"Huh? What is this?"</h1>
+        <h1 class="home-info-text">"Huh? What is this?"</h1>
       </div>
-      <div class= "closed-box">
-          <%= image_tag "boxes/closed-box.png", class: "closed-box" %>
+      <div class="box-frame">
+        <%= image_tag "boxes/closed-box.png", class: "closed-box" %>
       </div>
     </div>
 
-    <div class="carousel-item">
+    <div class="carousel-item h-100 position-relative">
       <div class="home-info-3">
-        <h2>"Schedule your medication reminders with a furry friend!"</h2>
-        <h3>From: DocDoggie</h3>
-        <h3>To: You!</h3>
-        <a class="btn btn-gradient btn-home" href="#">Sign up</a>
+        <h2 class="home-info-text">"Schedule your medication reminders with a furry friend!"</h2>
       </div>
+        <div class="btn-home">
+        <%= link_to "Sign up", new_user_registration_path %>
+        </div>
       <div>
-          <%= image_tag "boxes/open-box.png", class: "open-box" %>
+      <div class="box-frame">
+        <%= image_tag "boxes/open-box.png", class: "open-box" %>
+      </div>
       </div>
     </div>
   </div>
