--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,6 +4,8 @@
 }
 
 .background-dashboard{
+  display: flex;
+  justify-content: center;
   position: center;
   height: 400px;
   background-size: cover;
@@ -12,6 +14,13 @@
 .dashboard-header {
   text-align: center;
   align-content: center;
+  padding-top: 10px;
+
+  h1 {
+    font-weight: 800;
+    font-size: 40px;
+    margin-bottom: 0;
+  }
 }
 
 .dashboard-items{
@@ -47,5 +56,8 @@ a {
 }
 
 .icon-text{
-  color:black
+  color:black;
+  font-weight: 800;
+  margin-top: 5px;
+  font-size: 20px;
 }
