--- a/app/assets/stylesheets/medications/_new.scss
+++ b/app/assets/stylesheets/medications/_new.scss
@@ -1,6 +1,7 @@
 .add_your_med{
   display: flex;
   flex-direction: column;
+  background-color:white;
   justify-content: space-between;
   align-items: center;
   margin-top: 50px;
@@ -9,4 +10,8 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
   border-radius: 10px;
   padding: 10px;
+}
+
+.collection_check_boxes{
+
 }
