--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -1,73 +1,141 @@
-<div data-controller="medications">
-  <h1>Medications</h1>
+<div class="medications-dashboard" data-controller="medications">
   <div class="list-buttons">
-    <div class="all-button" type="button" data-action="click->medications#activate">All</div>
-    <div class="morning-button" type="button" data-action="click->medications#activate">Morning</div>
-    <div class="afternoon-button" type="button" data-action="click->medications#activate">Afternoon</div>
-    <div class="night-button" type="button" data-action="click->medications#activate">Night</div>
+    <div class="toggle-list all-button" type="button" data-action="click->medications#activate" data-medications-target="listButton"><i class="fa-solid fa-list-check"></i></div>
+    <div class="toggle-list morning-button" type="button" data-action="click->medications#activate" data-medications-target="listButton"><i class="fa-solid fa-sun"></i></div>
+    <div class="toggle-list afternoon-button" type="button" data-action="click->medications#activate" data-medications-target="listButton"><i class="fa-solid fa-cloud-sun"></i></div>
+    <div class="toggle-list night-button" type="button" data-action="click->medications#activate" data-medications-target="listButton"><i class="fa-solid fa-cloud-moon"></i></div>
   </div>
 
-  <div id="medications-list">
+  <div id="medications-lists">
     <div class="d-none" id="all-meds" data-medications-target="timeOfDay">
+
       <% @all_medications.each do |medication|%>
-        <div class="med-div">
-          <div class="name-and-dosage">
-            <p><%= medication.name %></p>
-            <p><%= "#{medication.dosage}mg" %></p>
-          </div>
-          <div class="time-and-weekdays">
-            <p><%= medication.hours.strftime("%I:%M %p") %></p>
-          </div>
-        </div>
+        <%= link_to medication_path(medication), class:"med-div" do %>
+            <div class="name-and-dosage">
+              <div><%= medication.name %></div>
+              <div><%= "#{medication.dosage}mg" %></div>
+            </div>
+            <div class="time-and-weekdays">
+              <div><%= medication.hours.strftime("%I:%M %p") %></div>
+              <div>
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = true %>
+                <% end %>
+                <% @all_weekdays.each do |key, value| %>
+                  <% if value %>
+                    <strong style="color: #FF8787;"><%= key[0] %></strong>
+                  <% else %>
+                    <strong style="color: black;"><%= key[0] %></strong>
+                  <% end %>
+                <% end %>
+
+              <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = false %>
+                <% end %>
+              </div>
+            </div>
+        <% end %>
       <% end %>
+
     </div>
 
     <div class="d-none" id="morning-meds" data-medications-target="timeOfDay">
-      <% @morning_medications.each do |medication| %>
-        <div class="med-div">
-          <div class="med-div">
-          <div class="name-and-dosage">
-            <p><%= medication.name %></p>
-            <p><%= "#{medication.dosage}mg" %></p>
-          </div>
-          <div class="time-and-weekdays">
-            <p><%= medication.hours.strftime("%I:%M %p") %></p>
-          </div>
-        </div>
-        </div>
+
+      <% @morning_medications.each do |medication|%>
+        <%= link_to medication_path(medication), class:"med-div" do %>
+            <div class="name-and-dosage">
+              <div><%= medication.name %></div>
+              <div><%= "#{medication.dosage}mg" %></div>
+            </div>
+            <div class="time-and-weekdays">
+              <div><%= medication.hours.strftime("%I:%M %p") %></div>
+              <div>
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = true %>
+                <% end %>
+
+                <% @all_weekdays.each do |key, value| %>
+                  <% if value %>
+                    <strong style="color: #FF8787;"><%= key[0] %></strong>
+                  <% else %>
+                    <strong style="color: black;"><%= key[0] %></strong>
+                  <% end %>
+                <% end %>
+
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = false %>
+                <% end %>
+              </div>
+            </div>
+        <% end %>
       <% end %>
+
     </div>
 
     <div class="d-none" id="afternoon-meds" data-medications-target="timeOfDay">
-      <% @afternoon_medications.each do |medication| %>
-        <div class="med-div">
-          <div class="med-div">
-          <div class="name-and-dosage">
-            <p><%= medication.name %></p>
-            <p><%= "#{medication.dosage}mg" %></p>
-          </div>
-          <div class="time-and-weekdays">
-            <p><%= medication.hours.strftime("%I:%M %p") %></p>
-          </div>
-        </div>
-        </div>
+
+      <% @afternoon_medications.each do |medication|%>
+        <%= link_to medication_path(medication), class:"med-div" do %>
+            <div class="name-and-dosage">
+              <div><%= medication.name %></div>
+              <div><%= "#{medication.dosage}mg" %></div>
+            </div>
+            <div class="time-and-weekdays">
+              <div><%= medication.hours.strftime("%I:%M %p") %></div>
+              <div>
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = true %>
+                <% end %>
+                <% @all_weekdays.each do |key, value| %>
+                  <% if value %>
+                    <strong style="color: #FF8787;"><%= key[0] %></strong>
+                  <% else %>
+                    <strong style="color: black;"><%= key[0] %></strong>
+                  <% end %>
+                <% end %>
+
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = false %>
+                <% end %>
+              </div>
+            </div>
+        <% end %>
       <% end %>
+
+
     </div>
 
     <div class="d-none" id="night-meds" data-medications-target="timeOfDay">
-      <% @night_medications.each do |medication| %>
-        <div class="med-div">
-          <div class="med-div">
-          <div class="name-and-dosage">
-            <p><%= medication.name %></p>
-            <p><%= "#{medication.dosage}mg" %></p>
-          </div>
-          <div class="time-and-weekdays">
-            <p><%= medication.hours.strftime("%I:%M %p") %></p>
-          </div>
-        </div>
-        </div>
+
+      <% @night_medications.each do |medication|%>
+        <%= link_to medication_path(medication), class:"med-div" do %>
+            <div class="name-and-dosage">
+              <div><%= medication.name %></div>
+              <div><%= "#{medication.dosage}mg" %></div>
+            </div>
+            <div class="time-and-weekdays">
+              <div><%= medication.hours.strftime("%I:%M %p") %></div>
+              <div>
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = true %>
+                <% end %>
+                <% @all_weekdays.each do |key, value| %>
+                  <% if value %>
+                    <strong style="color: #FF8787;"><%= key[0] %></strong>
+                  <% else %>
+                    <strong style="color: black;"><%= key[0] %></strong>
+                  <% end %>
+                <% end %>
+
+                <% medication.weekdays.each do |weekday|%>
+                  <% @all_weekdays[weekday] = false %>
+                <% end %>
+              </div>
+            </div>
+        <% end %>
       <% end %>
+
+
     </div>
   </div>
 </div>
