deu muitoooooo trabalho

--- a/app/assets/stylesheets/medications/_new.scss
+++ b/app/assets/stylesheets/medications/_new.scss
@@ -12,6 +12,11 @@
   padding: 10px;
 }
 
-.collection_check_boxes{
+.form-round{
+  border-radius: 10px;
+}
 
+
+.collection_check_boxes{
+  display: flex;
 }
