--- a/app/views/medications/show.html.erb
+++ b/app/views/medications/show.html.erb
@@ -24,7 +24,7 @@
     <h3><strong>Purpose:</strong> <%= @medication.purpose %></h3>
       <div class="medication-description">
         <p><strong>Description:</strong></p>
-        <p>Fluoxetine is an antidepressant of the selective serotonin reuptake inhibitor (SSRI) class.[2] It is used for the treatment of major depressive disorder, obsessive–compulsive disorder (OCD), bulimia nervosa, panic disorder, and premenstrual dysphoric disorder.</p>
+        <p> If you take more than one medicine, it is important to take them carefully and safely. Some medicines can interact and cause side effects.</p>
       </div>
   </div>
 </div>
