fixed some stuff and the user query

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,7 +10,7 @@
     border-radius: 50px;
     font-weight: bold;
     font-size: 25px;
-    background: #FCD745;
+    background: #ffe26f;
     transition: 0.3s ease;
     padding: 5px;
     padding-left: 25px;
