--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
         <h2 class="home-info-text">"Schedule your medication reminders with a furry friend!"</h2>
       </div>
         <div class="btn-home">
-        <%= link_to "Sign up", new_user_registration_path %>
+        <%= link_to "Meet your friend!", new_user_registration_path %>
         </div>
       <div>
       <div class="box-frame">
