--- a/app/assets/stylesheets/medications/_new.scss
+++ b/app/assets/stylesheets/medications/_new.scss
@@ -16,7 +16,7 @@
   border-radius: 10px;
 }
 
-
-.collection_check_boxes{
-  display: flex;
+#medication-checkboxes {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
