--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -9,7 +9,9 @@
       <%= f.input :hours, :input_html => { :class => "form-round"} %>
       <%= f.input :taken, :input_html => { :class => "form-round"} %>
       <%= f.input :purpose, :input_html => { :class => "form-round"} %>
+      <div id="medication-checkboxes">
       <%= f.collection_check_boxes(:weekdays, {"Monday":1, "Thusday":2 , "Wednesday":3 ,"Thursday":4 ,"Friday":5 ,"Saturday":6 ,"Sunday":7}, :last, :first)%>
+      </div>
       <%= f.input :description, :input_html => { :class => "form-round"} %>
       <%= f.submit 'Add medication' %>
     <% end %>
