--- a/app/assets/stylesheets/medications/_show.scss
+++ b/app/assets/stylesheets/medications/_show.scss
@@ -21,6 +21,7 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
   border-radius: 10px;
   padding: 10px;
+  width: 300px;
 }
 
 .medication-description {
@@ -31,5 +32,26 @@
 
   p {
     margin-bottom: 0%;
+  }
+}
+
+.btn-edit {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+  margin-top: 15px;
+
+
+  a {
+    color: #4A4A4A;
+    border: 1px solid #4A4A4A;
+    padding: 2px 8px;
+    border-radius: 10px;
+    font-weight: lighter;
+    opacity: 0.6;
+    transition: opacity 0.3s ease;
+    &:active {
+      opacity: 1;
+    }
   }
 }
