--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -10,9 +10,12 @@
       <%= f.input :taken, :input_html => { :class => "form-round"} %>
       <%= f.input :purpose, :input_html => { :class => "form-round"} %>
       <div id="medication-checkboxes">
-        <%= f.collection_check_boxes(:weekdays, {"Monday": "Monday", "Tuesday": "Tuesday" , "Wednesday": "Wednesday" ,"Thursday": "Thursday" ,"Friday": "Friday" ,"Saturday": "Saturday" ,"Sunday": "Sunday"}, :last, :first)%>
+        <%= f.collection_check_boxes(:weekdays, {"Monday": "Monday", "Tuesday": "Tuesday" , " Wednesday": "Wednesday" ,"Thursday": "Thursday" ,"Friday": "Friday" ,"Saturday": "Saturday" ,"Sunday": "Sunday", "Select All": "All"}, :last, :first)%>
       </div>
-      <%= f.input :description, :input_html => { :class => "form-round"} %>
+      <%= f.input :description,
+                  input_html: { class: "form-round"},
+                  wrapper_html: { class: "mt-3" }
+                   %>
       <%= f.submit 'Add medication' %>
     <% end %>
   </div>
