--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -10,16 +10,13 @@
       <div id="medication-checkboxes">
         <%= f.collection_check_boxes(:weekdays, {"Monday": "Monday", "Tuesday": "Tuesday" , " Wednesday": "Wednesday" ,"Thursday": "Thursday" ,"Friday": "Friday" ,"Saturday": "Saturday" ,"Sunday": "Sunday", "Select All": "All"}, :last, :first)%>
       </div>
-      <%= f.input :description, :input_html => { :class => "form-round"} %>
+      <%= f.input :description,
+                    input_html: { class: "form-round"},
+                    wrapper_html: { class: "mt-3" } %>
+
       <div class="btn-addmed">
         <%= f.submit 'Add medication' => { :class => "btn-round-addmed"} %>
       </div>
-      <%= f.input :description,
-                  input_html: { class: "form-round"},
-                  wrapper_html: { class: "mt-3" }
-                   %>
-      <%= f.submit 'Add medication' %>
     <% end %>
   </div>
-
 </div>
