--- a/app/assets/stylesheets/medications/_edit.scss
+++ b/app/assets/stylesheets/medications/_edit.scss
@@ -1,13 +1,18 @@
 .edit-med-frame {
-    display: flex;
-    flex-direction: column;
-    background-color:white;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
-    margin: 20px;
-    margin-top: 50px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.2);
-    border-radius: 10px;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color:white;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  margin: 20px;
+  margin-top: 50px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.btn-edit-med {
+  display: flex;
+  justify-content: center;
 }
