--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="edit-med-frame">
   <%= simple_form_for @medication do |f| %>
     <%= f.input :name, :input_html => { :class => "form-round"} %>
@@ -7,9 +8,14 @@
     <%= f.input :taken, :input_html => { :class => "form-round"} %>
     <%= f.input :purpose, :input_html => { :class => "form-round"} %>
     <div id="medication-checkboxes">
-      <%= f.collection_check_boxes(:weekdays, {"Monday": "Monday", "Tuesday": "Tuesday" , "Wednesday": "Wednesday" ,"Thursday": "Thursday" ,"Friday": "Friday" ,"Saturday": "Saturday" ,"Sunday": "Sunday"}, :last, :first)%>
+      <%= f.collection_check_boxes(:weekdays, {"Monday": "Monday", "Tuesday": "Tuesday" , " Wednesday": "Wednesday" ,"Thursday": "Thursday" ,"Friday": "Friday" ,"Saturday": "Saturday" ,"Sunday": "Sunday", "Select All": "All"}, :last, :first)%>
     </div>
-    <%= f.input :description, :input_html => { :class => "form-round"} %>
-    <%= f.submit 'Edit medication' %>
+    <%= f.input :description,
+                    input_html: { class: "form-round"},
+                    wrapper_html: { class: "mt-3" } %>
+
+      <div class="btn-edit-med">
+        <%= f.submit 'edit medication' %>
+      </div>
   <% end %>
 </div>
