o botão já vai para o log in

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -42,3 +42,15 @@
   width: max-content;
   margin: 0 auto;
 }
+
+.btn-gradient{
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  font-weight: bold;
+  background: linear-gradient(#9de5aa, #76d9a2);
+  transition: background 0.3s ease;
+  border: 1px solid #7bd3a1;
+  display: flex;
+  justify-content: center;
+}
