--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -62,4 +62,6 @@
       </div>
     <% end %>
   </div>
+
+  <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-gradient" %>
 </div>
